# InfiniWeb

./: README.md  indexer.py  main.py  pyproject.toml  run.py  testing.pkl
app/: __init__.py  models.py  routes.py
app/blueprints/: web_logic.py
app/static/css/: unpoly-bootstrap5.min.css  unpoly.min.css
app/static/js/: unpoly-bootstrap5.min.js  unpoly.min.js
app/templates/: base.html  index.html
